Fix landing page horizontal scroll on mobile
Change animation to be -50% instead of -700px that was creating the overlapping on smaller devices
also added overflow-x: hidden;

--- a/src/style.css
+++ b/src/style.css
@@ -500,6 +500,7 @@ header{
 
 /* --------------------------------------------------- BANNER STYLING --------------------------------------------------------------*/
 #banner{
+    overflow-x: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -517,7 +518,7 @@ header{
     }
 
     50%{
-        transform: translateX(-700px);
+        transform: translateX(-50%);
     }
 
     100%{
